manifest/base/apps/regalia/workload/overlays/openapi-dev/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoreserver-backend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: scoreserver-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scoreserver-backend
    spec:
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: scoreserver-backend
              topologyKey: kubernetes.io/hostname
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: scoreserver
        image: backend
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: http
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: http
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: scoreserver-backend
spec:
  selector:
    app.kubernetes.io/name: scoreserver-backend
  ports:
  - name: http
    port: 8080
    targetPort: http
