manifest/base/apps/regalia/workload/overlays/openapi-dev/route-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scoreserver-admin
spec:
  parentRefs:
  - name: external
    namespace: gateway
    sectionName: https
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - admin-contest.k8s-dev.ictsc.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /oauth2
    backendRefs:
    - name: regalia-auth
      port: 80
      namespace: oauth2-proxy
      group: ''
      kind: Service
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: scoreserver-backend
      port: 8080
      group: ''
      kind: Service
      weight: 1
    filters:
    - &id001
      type: ExternalAuth
      externalAuth:
        protocol: HTTP
        backendRef:
          group: ''
          kind: Service
          name: regalia-auth
          namespace: oauth2-proxy
          port: 80
        http:
          allowedHeaders:
          - Cookie
          - X-Forwarded-Proto
          - X-Forwarded-Host
          allowedResponseHeaders:
          - Set-Cookie
          - X-Auth-Request-User
          - X-Auth-Request-Email
  - matches:
    - path:
        type: Exact
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          replaceFullPath: /admin/
        statusCode: 302
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: scoreserver-frontend
      port: 8080
      group: ''
      kind: Service
      weight: 1
    filters:
    - *id001
